--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - content/images/dashboard/atlas.png
     - content/images/dashboard/plus.png
     - content/images/dashboard/profile.avif
+    - content/images/icons/post.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
