--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.7
   shared_preferences: ^2.0.20
   fluttertoast: ^8.2.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
